
  - Added "list-table" directive.
  - Caught empty CSV table bug.

* docutils/transforms/references.py:

  - Fixed mislocated internal targets bug, by relocating targets into
    the next text element.
  - Fixed duplicate footnote label bug.

* docutils/writers/html4css1.py:

  - Fixed unencoded stylesheet reference bug (characters like "&" in
    stylesheet reference).

* docutils/writers/latex2e.py:

  - Improved --use-latex-docinfo so that organization/contact/address
    fields are lumped with the last author field and appear on the
    titlepage.
  - Made sure the titlepage is always shown with --use-latex-docinfo,
    even if the document has no title.
  - Made sure that latex doesn't fill in today's date if no date field
    was given.


Release 0.3.7 (2004-12-24)
==========================

* docutils/frontend.py:

  - Added options: --input-encoding-error-handler,
    --record-dependencies, --leave-footnote-reference-space,
    --strict-visitor.
  - Added command-line and config file support for "overrides" setting
    parameter.

* docutils/io.py:

  - Added support for input encoding error handler.

* docutils/nodes.py:

  - Added dispatch_visit and dispatch_departure methods to
    NodeVisitor; useful as a hook for Visitors.
  - Changed structure of ``line_block``; added ``line``.
  - Added ``compound`` node class.
  - Added a mechanism for Visitors to transitionally ignore new node
    classes.

* docutils/utils.py:

  - Moved ``escape2null`` and ``unescape`` functions from
    docutils/parsers/rst/states.py.

* docutils/parsers/rst/roles.py:

  - Added "raw" role.
  - Changed role function API: the "text" parameter now takes
    null-escaped interpreted text content.

* docutils/parsers/rst/states.py:

  - Fixed bug where a "role" directive in a nested parse would crash
    the parser; the state machine's "language" attribute was not being
    copied over.
  - Added support for line block syntax.